--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -1,6 +1,7 @@
 @import './_main.scss';
 @import './_home.scss';
 @import './_sorted-component.scss';
+@import './_wishList_save.scss';
 @import './_search-sort.scss';
 @import './_book-cards.scss';
 @import './_book-card.scss';
