--- a/src/styles/_book-card.scss
+++ b/src/styles/_book-card.scss
@@ -82,13 +82,13 @@
         };
 
         &__info {
-          &--date {
-            display: none;
-          };
+            &--date {
+                display: none;
+            };
 
-           &--title {
-            font-size: 1rem;
-           };           
+            &--title {
+                font-size: 1rem;
+            };           
         };
 
         &__more-btn {
@@ -120,10 +120,21 @@
 
 @media only screen and (min-width: 768px) {   
     .book-card--leftBarData { 
-        margin: 1rem;
-   
+        padding: 1rem;       
+        display: grid;
+        grid-template-rows: 1fr min-content min-content;
+        grid-template-columns: 1fr minmax(min-content , 3fr);
+        grid-template-areas: 
+        "image info"
+        "more more"
+        "details details";    
+
+        &__img {
+            float: left;
+        }
+
         &__more-btn {
-            display: block;            
+            display: inline;
         };
     };
 };
