--- a/src/styles/_about.scss
+++ b/src/styles/_about.scss
@@ -4,26 +4,28 @@
     background: $dark-transparent;
     padding: 1rem;
     font-size: 1.3rem;
-
+    h1 {
+        @include section-headers;
+    }
     h3 {
         margin-top: 1rem;
+        
     };
 
     p {
         margin-bottom: .5rem;
         margin-left: .5rem;
         &::first-letter {
-            font-size: 1.5rem;
-            font-weight: 600;
+            font-size: 1.7rem;
         };
-    };
-    
-    li {
-        margin-left: 2rem;
     };
 
     a {
         text-decoration: underline;
         cursor: pointer;
+    };    
+
+    span {
+        font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
     };
 };
