--- a/src/styles/_home.scss
+++ b/src/styles/_home.scss
@@ -3,6 +3,7 @@
 .home {
     background: $dark-transparent;
     padding: 1rem;
+    padding-top: 3rem;
     font-size: 1.5rem;
 
     text-align: center;
@@ -12,14 +13,18 @@
     
     h1 {
         margin-bottom: 1rem;
+
+        @include section-headers;
+        font-size: 3rem;
+        font-weight: 400
     };
 
     p {
         margin-bottom: .5rem;
-        
+
+        @include section-headers;
         &::first-letter {
-            font-size: 1.6rem;
-            font-weight: 600;
+            font-size: 2.5rem;
         };
     };
 };
