--- a/src/styles/_content.scss
+++ b/src/styles/_content.scss
@@ -40,12 +40,12 @@
 
 @media only screen and (min-width: 992px) {   
     .content {
-        padding: 2rem;
+        padding: 2rem 2rem .5rem 2rem ;
     };
 } ;
 
 @media only screen and (min-width: 1200px) {  
     .content {
-        padding: 3rem;
+        padding: 3rem 3rem .5rem 3rem;
     };
 };
