--- a/src/styles/_header.scss
+++ b/src/styles/_header.scss
@@ -30,7 +30,7 @@
         margin-left: .5rem;
         font-family: 'Stardos Stencil', cursive;
         position: absolute;
-        top: 6rem;
+        bottom: -1rem;
         color: $dark-font;
     }
     h1 {
@@ -39,7 +39,7 @@
 
     h3 {
         position: absolute;
-        top: 5.5rem;
+        bottom: 3.7rem;
     };
 
     &__navigation {
