--- a/src/styles/_author-details.scss
+++ b/src/styles/_author-details.scss
@@ -34,6 +34,17 @@
         
         &::first-letter {
             font-size: 2rem;
-        }
+        };
+    };
+};
+
+@media only screen and (max-width: 400px) {
+    .author {
+        img {
+            float: none;
+            margin: auto;
+            display: flex;
+            align-self: center;
+        };
     };
 };
