--- a/src/styles/_header.scss
+++ b/src/styles/_header.scss
@@ -30,7 +30,7 @@
         margin-left: .5rem;
         font-family: 'Stardos Stencil', cursive;
         position: absolute;
-        bottom: -1rem;
+        bottom: -2rem;
         color: $dark-font;
     }
     h1 {
@@ -39,15 +39,21 @@
 
     h3 {
         position: absolute;
-        bottom: 3.7rem;
+        bottom: 2.5rem;
     };
 
     &__navigation {
-        position: absolute;
+        position: fixed;        
         width: 100%;
         right: 0;
-        top: 1rem;
-        text-align: center;        
+        top: 0;
+        text-align: center; 
+        background-image: url("./photo-1515125520141-3e3b67bc0a88.jpg");
+        background-repeat: no-repeat;
+        background-position: center;
+        background-size: cover;
+        background-attachment: fixed;
+        padding: 1rem 0;       
         ul > * {
             margin: 1rem;
     
@@ -55,6 +61,13 @@
     };
 };
 
+@media only screen and (max-width:600px) and (orientation: landscape) {
+    .header {
+        &__navigation {             
+            box-shadow: 0px 7px 30px 0px rgba(0,0,0,0.75);
+        };
+    };
+}
 
 @media only screen and (min-width: 600px) {   
     .header { 
@@ -68,6 +81,7 @@
         &__navigation {
             width: auto;
             right: 4rem;    
+            background-image: none; 
         };
     };
 };
