--- a/src/styles/_header.scss
+++ b/src/styles/_header.scss
@@ -50,7 +50,7 @@
         text-align: center; 
         background-image: url("./photo-1515125520141-3e3b67bc0a88.jpg");
         background-repeat: no-repeat;
-        background-position: center;
+        background-position: top center;
         background-size: cover;
         background-attachment: fixed;
         padding: 1rem 0;       
